fixtures/errors/get_own_property_descriptor_non_object.js
// Test Object.getOwnPropertyDescriptor with non-object argument
Object.getOwnPropertyDescriptor(42, 'x');
